package travelagency.model.enums;

public enum DifficultyLevel {
    EASY,
    MEDIUM,
    HARD
}

