package travelagency.model.enums;

public enum PaymentMethod {
    CASH, BANK_TRANSFER
}
