package travelagency.model.enums;

public enum ReservationStatus {
    PENDING, CONFIRMED, COMPLETED, CANCELLED
}
