package travelagency.model.enums;

public enum UserRole {
    CUSTOMER,
    ADMIN
}
